[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Weapeons/Melee Weapons/Shuriken/Shuriken.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Shuriken.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.54951

[node name="Shuriken" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shuriken_Animation" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 2

[node name="AreaofDetection" type="CollisionPolygon2D" parent="HitBox"]
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( -1, -7.5, 0, -7.5, 0, -7, 0.5, -7, 0.5, -6, 1, -6, 1, -5.5, 1.5, -5.5, 1.5, -5, 1.5, -4.5, 2, -4.5, 2, -4, 2.5, -4, 2.5, -3, 3, -3, 3, -2.5, 3.5, -2.5, 3.5, -2, 3, -2, 3, -1, 7.5, -1, 7.5, 0, 7, 0, 7, 0.5, 6, 0.5, 6, 1, 5.5, 1, 5.5, 1.5, 4.5, 1.5, 4.5, 2, 4, 2, 4, 2.5, 3, 2.5, 3, 3, 2.5, 3, 2.5, 3.5, 2, 3.5, 2, 3, 1, 3, 1, 7.5, 0, 7.5, 0, 7, -0.5, 7, -0.5, 6, -1, 6, -1, 5.5, -1.5, 5.5, -1.5, 4.5, -2, 4.5, -2, 4, -2.5, 4, -2.5, 3, -3, 3, -3, 2.5, -3.5, 2.5, -3.5, 2, -3, 2, -3, 1, -7.5, 1, -7.5, 0, -7, 0, -7, -0.5, -6, -0.5, -6, -1, -5.5, -1, -5.5, -1.5, -5, -1.5, -4.5, -1.5, -4.5, -2, -4, -2, -4, -2.5, -3, -2.5, -3, -3, -2.5, -3, -2.5, -3.5, -2, -3.5, -2, -3, -1, -3 )

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
